Fix hamburger alignment.

--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -56,10 +56,10 @@
   width: 100%;
 }
 .hamb-line::before {
-  top: 5px;
+  top: 8px;
 }
 .hamb-line::after {
-  top: -5px;
+  top: -8px;
 }
 
 .side-menu {
